--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 
-asgiref              3.2.7  
-Django               3.0.5  
-django-crispy-forms  1.9.0  
-django-widget-tweaks 1.4.8  
-gunicorn             20.0.4 
-Pillow               7.1.1  
-pip                  18.1    
-pytz                 2019.3 
-setuptools           40.8.0 
-sqlparse             0.3.1  
-whitenoise           5.0.1  
+asgiref==3.2.7  
+Django==3.0.5  
+django-crispy-forms==1.9.0  
+django-widget-tweaks==1.4.8  
+gunicorn==20.0.4 
+Pillow==7.1.1  
+pip==18.1    
+pytz==2019.3 
+setuptools==40.8.0 
+sqlparse==0.3.1  
+whitenoise==5.0.1  
