--- a/Main/.env
+++ b/Main/.env
@@ -1,2 +1,2 @@
-SECRET_KEY=lx*y18hk253s)iasvt2aek8-+va=p-=q(rbcm$^k9g9mtovewt
-ADMIN_URL=noyoucantaccess
+SECRET_KEY=b%j&!gfm)z25rhne!+izixpe)6_i+@cpw$t9f=x5qy70v)yiy1
+ADMIN_URL=wowrookymistake
