--- a/Main/.env
+++ b/Main/.env
@@ -1,2 +1,2 @@
-SECRET_KEY=b%j&!gfm)z25rhne!+izixpe)6_i+@cpw$t9f=x5qy70v)yiy1
-ADMIN_URL=wowrookymistake
+SECRET_KEY=+609^1%%!hp=o!#0q)7w#**@fa3vrsu4$y%#of1af)d)+&@9@q
+ADMIN_URL=yikesiamembarrassed
